
0.9.9
    * Fixed errors in Sarissa.updateContentFromForm (that's what you get for 
      not keeping your unit tests up to date)
    * Two distributions now exist: a JAR artifact for for Maven users 
      (sarissa-VERSION.jar) and one for generic projects that also includes the 
      documentation (sarissa-full-VERSION.zip)
    
0.9.8.1
    * Fixed pickRecentProgID variable scope and JSLint compliance thanks to Duncan Booth
    * Fixed included/imported stylesheet along with the document() function for 
      MSXML 3.0 thanks to a bug report by zizo1 (sf user)
    * Added compressed versions of all script files; they are created automatically
      thanks to the MobilVox Maven JavaScript Plugin, see
      http://www.mobilvox.com/projects/maven-js-plugin/
    * Added syntax highlighting to the HOWTOs thanks to the integration of SyntaxHighlighter
      by Alex Gorbatchev to our custom Maven skin, see 
      http://code.google.com/p/syntaxhighlighter/


0.9.8.0
    * Changed importStylesheet for IE thanks to dougdomeny. 
    * Fixed XSLT parameter clearing bugs thanks to Vitaliy Ischenko
    * Added support for Javeline's XPath/XSLT compatibility library thanks 
      to Jean Sebastien Baklouti and Ruben Daniels. 

0.9.7.8
    * Fixed XSLTProcessor.getParameter bug thanks to Jason (MoonScript sf user)

0.9.7.7
    * Fixed deprecated IE XSLT emu checks and Sarissa.getParseErrorText bug thanks to wfay
    * Added Sarissa.VERSION thanks to  Mike Brown 
    * Fixed spelling errors and had drinks thanks to Greg Higgins
    * Had drinks and a good time thanks to Cedric - cedsav
    * Added support for Text Nodes in document.importNode implementation for IE
    * Fixed clearParameters bug in MSXML 3.0 thanks to Hartmut Wynen
    * Enchanced setParameter to allow clearing parameters when null is passed as a param value 
      thanks to Hartmut Wynen
    * Fixed Sarissa.updateContentFromURI bug (1614011) thanks to Arjen Duursma 

0.9.7.6 