@@ -16,7 +16,7 @@
 <head>
 	<title>Sarissa test page</title>
 	<link rel="stylesheet" type="text/css" href="../css/sarissa.css" />
-	<style type="text/css" rel="stylesheet">
+	<style type="text/css">
 	div.placeholder{border:1px solid #a7a7a7;}
 	</style>
 	<script type="text/javascript" src="../ecmaunit/ecmaunit.js"> </script>
